// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render IssuesAppealsTableFilters Direct filter 1`] = `
Array [
  <button
    aria-pressed="true"
    autocomplete="off"
    class="Button2 Button2_checked Button2_theme_normal Button2_size_s Button2_pin_round-brick IssuesAppeals-Filters IssuesAppeals-Filters_type_left"
    type="button"
  >
    <span
      class="Button2-Text"
    >
      i18n:hierarchy-direct
    </span>
  </button>,
  <button
    aria-pressed="false"
    autocomplete="off"
    class="Button2 Button2_theme_normal Button2_size_s Button2_pin_brick-round IssuesAppeals-Filters IssuesAppeals-Filters_type_right"
    type="button"
  >
    <span
      class="Button2-Text"
    >
      i18n:hierarchy-inherited
    </span>
  </button>,
]
`;

exports[`Should render IssuesAppealsTableFilters Hierarchy filter 1`] = `
Array [
  <button
    aria-pressed="false"
    autocomplete="off"
    class="Button2 Button2_theme_normal Button2_size_s Button2_pin_round-brick IssuesAppeals-Filters IssuesAppeals-Filters_type_left"
    type="button"
  >
    <span
      class="Button2-Text"
    >
      i18n:hierarchy-direct
    </span>
  </button>,
  <button
    aria-pressed="true"
    autocomplete="off"
    class="Button2 Button2_checked Button2_theme_normal Button2_size_s Button2_pin_brick-round IssuesAppeals-Filters IssuesAppeals-Filters_type_right"
    type="button"
  >
    <span
      class="Button2-Text"
    >
      i18n:hierarchy-inherited
    </span>
  </button>,
]
`;
